server/compilers/goLiteJS/src/test/ml2/valid/structtype1.go
package main

var a struct {
	a int
}
var b struct {
	a int
}

func main() {
	a = b // legal
}

