server/compilers/goLiteJS/src/test/ml2/invalid/binary8.go
// invalid && types
package main

func main() {
    _ = false && 'a'
}
